--- a/black-nebula-webpage/service-details.html
+++ b/black-nebula-webpage/service-details.html
@@ -93,25 +93,24 @@
             <h4>hardware service</h4>
             <p>We specialize in top-notch hardware services for laptops, desktops, and mobile devices. From screen repairs and battery replacements to RAM upgrades and motherboard fixes, we handle it all. Whether you need custom PC assembly, storage upgrades, or peripheral troubleshooting, our experts ensure your devices run seamlessly. Trust us for quick, reliable hardware solutions tailored to your needs.
             </p>
+            <h4>software</h4>
+            <p>Our software services cover everything from operating system installations and updates to advanced data recovery and virus removal. Need custom applications, business software, or performance optimization? We've got you covered! With our expertise in software development, deployment, and maintenance, we ensure smooth operations for both personal and business needs. Choose us for efficient, hassle-free software solutions!
+            </p>
+
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+            <h3>service handle</h3>
+            <p>Our service analysis and repair the error in product and  our service  centre is provided best  costumer service  
+              
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>good service</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>treat good coustmer service</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>time keep-up</span></li>
             </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+           
           </div>
 
         </div>
