--- a/black-nebula-webpage/index.html
+++ b/black-nebula-webpage/index.html
@@ -172,7 +172,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>coustmer ratings</h2>
+        <h2>coustmer reviwes</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -297,7 +297,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>,bhavain,erode,tamilnadu</p>
+                  <p>bhavain,erode,tamilnadu</p>
                 </div>
               </div><!-- End Info Item -->
 
